syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Suggestion/Support/Grpc/Protos/model.proto";
service CreateGradeGrpcService {
  rpc createGrade (CreateGradeProto) returns (CreateGradeProtoResponse);
}